--- a/app/src/main/res/layout/splashfile.xml
+++ b/app/src/main/res/layout/splashfile.xml
@@ -3,22 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorSplashBG">
 
     <ImageView
         android:id="@+id/logo_id"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/tfl2_logo"/>
+        android:src="@drawable/cassava_logo"
+        android:contentDescription="TODO" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo_id"
         android:layout_centerHorizontal="true"
-        android:text="Splash Screen"
-        android:textSize="30dp"
-        android:textColor="@color/colorAccent"/>
+        android:text="@string/app_name"
+        android:textColor="@color/colorSplashText"
+        android:textSize="30sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="bold" />
 
 </RelativeLayout>
